--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ publishing {
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
 	}
-	setupRepositories(repositories)
+	// setupRepositories(repositories)
 }
 
 loom {
